@@ -94,10 +94,6 @@ TRAP:"pit",(05,10)
 TRAP:"pit",(06,10)
 TRAP:"pit",(07,10)
 
-# A little help
-OBJECT:('?',"earth"),(02,11)
-OBJECT:('?',"earth"),(03,11)
-
 soko_loot()
 
 
@@ -152,10 +148,6 @@ TRAP:"pit",(03,08)
 TRAP:"pit",(04,08)
 TRAP:"pit",(05,08)
 TRAP:"pit",(06,08)
-
-# A little help
-OBJECT:('?',"earth"),(01,09)
-OBJECT:('?',"earth"),(02,09)
 
 soko_loot()
 
@@ -229,9 +221,6 @@ TRAP:"pit",(24,10)
 TRAP:"pit",(25,10)
 TRAP:"pit",(26,10)
 
-OBJECT:('?',"earth"),(03,10)
-OBJECT:('?',"earth"),(04,10)
-
 soko_loot()
 
 
@@ -294,9 +283,6 @@ TRAP:"pit",(20,10)
 TRAP:"pit",(21,10)
 TRAP:"pit",(22,10)
 TRAP:"pit",(23,10)
-
-OBJECT:('?',"earth"),(08,12)
-OBJECT:('?',"earth"),(09,12)
 
 soko_loot()
 
@@ -634,8 +620,6 @@ STAIR:(26,6), up
 REGION:(00,00,28,12),lit,"ordinary"
 NON_DIGGABLE:(00,00,28,12)
 NON_PASSWALL:(00,00,28,12)
-OBJECT:('?',"earth"),(16,3)
-OBJECT:('?',"earth"),(16,9)
 OBJECT:('`',"boulder"),(8,2)
 OBJECT:('`',"boulder"),(8,4)
 OBJECT:('`',"boulder"),(3,5)
@@ -688,8 +672,6 @@ REGION:(00,00,18,15),lit,"ordinary"
 NON_DIGGABLE:(00,00,18,15)
 NON_PASSWALL:(00,00,18,15)
 DOOR:locked,(2,2)
-OBJECT:('?',"earth"),(1,13)
-OBJECT:('?',"earth"),(2,13)
 OBJECT:('`',"boulder"),(8,6)
 OBJECT:('`',"boulder"),(10,6)
 OBJECT:('`',"boulder"),(15,6)
@@ -746,8 +728,6 @@ REGION:(00,00,15,15),lit,"ordinary"
 NON_DIGGABLE:(00,00,15,15)
 NON_PASSWALL:(00,00,15,15)
 DOOR:locked,(14,4)
-OBJECT:('?',"earth"),(1,1)
-OBJECT:('?',"earth"),(2,1)
 OBJECT:('`',"boulder"),(2,4)
 OBJECT:('`',"boulder"),(2,5)
 OBJECT:('`',"boulder"),(4,5)
@@ -800,8 +780,6 @@ STAIR:(11,7), up
 REGION:(00,00,16,12),lit,"ordinary"
 NON_DIGGABLE:(00,00,16,12)
 NON_PASSWALL:(00,00,16,12)
-OBJECT:('?',"earth"),(14,1)
-OBJECT:('?',"earth"),(15,1)
 OBJECT:('`',"boulder"),(12,2)
 OBJECT:('`',"boulder"),(6,3)
 OBJECT:('`',"boulder"),(12,3)
@@ -855,8 +833,6 @@ REGION:(00,00,28,15),lit,"ordinary"
 NON_DIGGABLE:(00,00,28,15)
 NON_PASSWALL:(00,00,28,15)
 DOOR:locked,(26,12)
-OBJECT:('?',"earth"),(13,13)
-OBJECT:('?',"earth"),(15,13)
 OBJECT:('`',"boulder"),(2,2)
 OBJECT:('`',"boulder"),(7,2)
 OBJECT:('`',"boulder"),(2,3)
@@ -944,8 +920,6 @@ STAIR:(9,9), up
 REGION:(00,00,15,10),lit,"ordinary"
 NON_DIGGABLE:(00,00,15,10)
 NON_PASSWALL:(00,00,15,10)
-OBJECT:('?',"earth"),(14,6)
-OBJECT:('?',"earth"),(14,7)
 OBJECT:('`',"boulder"),(4,2)
 OBJECT:('`',"boulder"),(8,3)
 OBJECT:('`',"boulder"),(6,4)
@@ -989,8 +963,6 @@ STAIR:(10,9), up
 REGION:(00,00,18,11),lit,"ordinary"
 NON_DIGGABLE:(00,00,18,11)
 NON_PASSWALL:(00,00,18,11)
-OBJECT:('?',"earth"),(1,8)
-OBJECT:('?',"earth"),(1,9)
 OBJECT:('`',"boulder"),(12,2)
 OBJECT:('`',"boulder"),(14,2)
 OBJECT:('`',"boulder"),(9,3)
@@ -1056,9 +1028,6 @@ TRAP:"pit",(7,5)
 TRAP:"pit",(8,5)
 TRAP:"pit",(9,5)
 
-OBJECT:('?',"earth"),(02,06)
-OBJECT:('?',"earth"),(03,06)
-
 soko_loot()
 
 
@@ -1117,9 +1086,6 @@ TRAP:"pit",(6,11)
 TRAP:"pit",(7,11)
 TRAP:"pit",(8,11)
 
-OBJECT:('?',"earth"),(02,04)
-OBJECT:('?',"earth"),(03,04)
-
 soko_loot()
 
 
@@ -1172,9 +1138,6 @@ TRAP:"pit",(19,8)
 TRAP:"pit",(15,9)
 TRAP:"pit",(16,9)
 TRAP:"pit",(17,9)
-
-OBJECT:('?',"earth"),(18,10)
-OBJECT:('?',"earth"),(19,10)
 
 soko_loot()
 
@@ -1242,9 +1205,6 @@ TRAP:"pit",(10,10)
 TRAP:"pit",(9,11)
 TRAP:"pit",(10,11)
 
-OBJECT:('?',"earth"),(09,12)
-OBJECT:('?',"earth"),(10,12)
-
 soko_loot()
 
 
@@ -1298,9 +1258,6 @@ TRAP:"pit",(14,8)
 TRAP:"pit",(15,8)
 TRAP:"pit",(16,8)
 TRAP:"pit",(17,8)
-
-OBJECT:('?',"earth"),(18,09)
-OBJECT:('?',"earth"),(19,09)
 
 soko_loot()
 
@@ -1798,10 +1755,6 @@ TRAP:"pit",(01,06)
 TRAP:"pit",(01,07)
 TRAP:"pit",(01,08)
 
-# A little help
-OBJECT:('?',"earth"),(01,02)
-OBJECT:('?',"earth"),(02,02)
-
 soko_loot()
 
 
@@ -1855,10 +1808,6 @@ TRAP:"pit",(01,05)
 TRAP:"pit",(01,04)
 TRAP:"pit",(01,03)
 TRAP:"pit",(01,02)
-
-# A little help
-OBJECT:('?',"earth"),(01,10)
-OBJECT:('?',"earth"),(02,10)
 
 soko_loot()
 
