@@ -193,6 +193,7 @@ E void NDECL(sanity_check);
 #endif
 E char FDECL(yn_function, (const char *, const char *, CHAR_P));
 E char FDECL(paranoid_yn, (const char *, BOOLEAN_P));
+E void NDECL(sokoban_trickster);
 
 /* ### dbridge.c ### */
 
